--- a/composer.json
+++ b/composer.json
@@ -14,9 +14,11 @@
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
+        "intervention/image": "^2.5",
         "laravel/framework": "^8.12",
         "laravel/tinker": "^2.5",
-        "spatie/laravel-sluggable": "^2.6"
+        "spatie/laravel-sluggable": "^2.6",
+        "spatie/laravel-translatable": "^4.6"
     },
     "require-dev": {
         "backpack/generators": "^3.1",
